--- a/python/py_Get_US_Stock_data.ipynb
+++ b/python/py_Get_US_Stock_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5f8d7677-b2d9-4118-9825-efe8c35ac0aa",
    "metadata": {},
    "outputs": [
@@ -10,18 +10,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  7 of 7 completed\n"
+      "[*********************100%***********************]  7 of 7 completed"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "\"\\ndf.columns = ['Date', 'Ticker', 'Open', 'High', 'Low', 'Close', 'Volume']\\ndf = df[['Ticker', 'Date', 'Open', 'High', 'Low', 'Close', 'Volume']]\\nprint(df)\\n\""
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-01-04 00:00:00\n",
+      "2026-01-23 00:00:00\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -31,16 +36,22 @@
     "from datetime import datetime\n",
     "\n",
     "# Define tickers in a list\n",
-    "tickers = [\"AMD\", \"NVDA\", \"AMZN\", \"VOO\", \"PLTR\", \"TSLA\", \"AAPL\"]\n",
+    "tickers = [\"AMD\", \"NVDA\", \"AMZN\", \"PLTR\", \"TSLA\", \"AAPL\"]\n",
+    "\n",
+    "# set the start date for our market data request\n",
+    "start_date = datetime(year=2021, month=1, day=1)\n",
     "\n",
     "# Define interval for fetching data\n",
     "interval = \"1d\"\n",
     "\n",
-    "data = yf.download(tickers, period=\"5y\", interval=interval)\n",
+    "data = yf.download(tickers, start=start_date, interval=interval)\n",
     "df = data.stack(level=1, future_stack=True).reset_index()\n",
     "\n",
     "df.columns = ['Date', 'Ticker', 'Open', 'High', 'Low', 'Close', 'Volume']\n",
-    "df = df[['Ticker', 'Date', 'Open', 'High', 'Low', 'Close', 'Volume']]"
+    "df = df[['Ticker', 'Date', 'Open', 'High', 'Low', 'Close', 'Volume']]\n",
+    "\n",
+    "print(min(df['Date']))\n",
+    "print(max(df['Date']))"
    ]
   },
   {
