--- a/python/py_Init_US_Market_Holidays.ipynb
+++ b/python/py_Init_US_Market_Holidays.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e0e49935-a7a8-4265-8d08-5755ba3c529c",
    "metadata": {},
    "outputs": [],
@@ -14,100 +14,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "90a920ce-85eb-4c61-9775-be65d938fa7b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Status</th>\n",
-       "      <th>Start_Time</th>\n",
-       "      <th>End_Time</th>\n",
-       "      <th>Description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>234</th>\n",
-       "      <td>2020-01-01</td>\n",
-       "      <td>closed</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>New Year's Day</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>235</th>\n",
-       "      <td>2020-01-20</td>\n",
-       "      <td>closed</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Martin Luther King's Birthday</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>236</th>\n",
-       "      <td>2020-02-17</td>\n",
-       "      <td>closed</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Washington's Birthday</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>237</th>\n",
-       "      <td>2020-04-10</td>\n",
-       "      <td>closed</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Good Friday</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>238</th>\n",
-       "      <td>2020-05-25</td>\n",
-       "      <td>closed</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Memorial Day</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          Date  Status Start_Time End_Time                    Description\n",
-       "234 2020-01-01  closed       None     None                 New Year's Day\n",
-       "235 2020-01-20  closed       None     None  Martin Luther King's Birthday\n",
-       "236 2020-02-17  closed       None     None          Washington's Birthday\n",
-       "237 2020-04-10  closed       None     None                    Good Friday\n",
-       "238 2020-05-25  closed       None     None                   Memorial Day"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-01-01 00:00:00\n"
+     ]
     }
    ],
    "source": [
-    "df = pd.read_csv('nyse_holidays.csv')\n",
-    "df = df[df['date'] >= '2020-01-01']\n",
+    "df = pd.read_csv('../resources/nyse_holidays_latest.csv')\n",
+    "df = df[df['date'] >= '2021-01-01']\n",
     "df = df[['date', 'status', 'start_time', 'end_time', 'holiday_name']]\n",
     "\n",
     "df.rename(columns = {\n",
@@ -123,7 +44,7 @@
     "df['Start_Time'] = df['Start_Time'].replace(np.nan, None)\n",
     "df['End_Time'] = df['End_Time'].replace(np.nan, None)\n",
     "\n",
-    "df.head()"
+    "print(max(df['Date']))"
    ]
   },
   {
@@ -247,6 +168,7 @@
     "    print(\"Loading Us Market Holiday Data into SQL Server...\")\n",
     "    \n",
     "    rows = list(sorted_df.itertuples(index=False, name=None))\n",
+    "    cursor.fast_executemany = True\n",
     "    cursor.executemany(insert_query, rows)\n",
     "    conn.commit()\n",
     "    print(f\"Successfully inserted {len(sorted_df)} records.\") \n",
