--- a/python/py_Init_US_Market_Holidays.ipynb
+++ b/python/py_Init_US_Market_Holidays.ipynb
@@ -42,38 +42,7 @@
     "df['Date'] = pd.to_datetime(df['Date'])\n",
     "\n",
     "df['Start_Time'] = df['Start_Time'].replace(np.nan, None)\n",
-    "df['End_Time'] = df['End_Time'].replace(np.nan, None)\n",
-    "\n",
-    "print(max(df['Date']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "dc6e464e-4040-4dad-8a25-5a0354200781",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 57 entries, 234 to 290\n",
-      "Data columns (total 5 columns):\n",
-      " #   Column       Non-Null Count  Dtype         \n",
-      "---  ------       --------------  -----         \n",
-      " 0   Date         57 non-null     datetime64[ns]\n",
-      " 1   Status       57 non-null     object        \n",
-      " 2   Start_Time   9 non-null      object        \n",
-      " 3   End_Time     9 non-null      object        \n",
-      " 4   Description  57 non-null     object        \n",
-      "dtypes: datetime64[ns](1), object(4)\n",
-      "memory usage: 2.7+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
+    "df['End_Time'] = df['End_Time'].replace(np.nan, None)"
    ]
   },
   {
