--- a/python/py_Get_US_Stock_data.ipynb
+++ b/python/py_Get_US_Stock_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "5f8d7677-b2d9-4118-9825-efe8c35ac0aa",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  7 of 7 completed"
+      "[*********************100%***********************]  6 of 6 completed"
      ]
     },
     {
@@ -65,7 +65,7 @@
      "output_type": "stream",
      "text": [
       "Loading Raw Data into SQL Server...\n",
-      "Successfully inserted 8785 records.\n"
+      "Successfully inserted 7620 records.\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
     "cursor.fast_executemany = True\n",
     "\n",
     "try :\n",
-    "    insert_query = \"INSERT INTO raw_us_stocks (Ticker, Date, [Open], high, low, [Close], volume) VALUES (?, ?, ?, ?, ?, ?, ?)\"\n",
+    "    insert_query = \"INSERT INTO raw.raw_us_stocks (Ticker, Date, [Open], high, low, [Close], volume) VALUES (?, ?, ?, ?, ?, ?, ?)\"\n",
     "    \n",
     "    print(\"Loading Raw Data into SQL Server...\")\n",
     "    \n",
@@ -109,7 +109,7 @@
    ],
    "source": [
     "try :\n",
-    "    cursor.execute('EXEC sp_Load_Staging_Layer')\n",
+    "    cursor.execute('EXEC analytics.sp_Load_Staging_Layer')\n",
     "    conn.commit()\n",
     "    print('Success')\n",
     "except Exception as e :\n",
