--- a/python/py_Init_US_Market_Holidays.ipynb
+++ b/python/py_Init_US_Market_Holidays.ipynb
@@ -2,30 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e0e49935-a7a8-4265-8d08-5755ba3c529c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import pyodbc"
+    "import pyodbc\n",
+    "import finnhub\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "90a920ce-85eb-4c61-9775-be65d938fa7b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2025-01-01 00:00:00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv('../resources/nyse_holidays_latest.csv')\n",
     "df = df[df['date'] >= '2021-01-01']\n",
@@ -47,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "502ae1bf-df2b-44cd-9a7c-6d03d5edd5eb",
    "metadata": {},
    "outputs": [
@@ -56,7 +50,7 @@
      "output_type": "stream",
      "text": [
       "Loading Us Market Holiday Data into SQL Server...\n",
-      "Successfully inserted 57 records.\n"
+      "Successfully inserted 46 records.\n"
      ]
     }
    ],
@@ -70,7 +64,7 @@
     "cursor = conn.cursor()\n",
     "\n",
     "try :\n",
-    "    insert_query = \"INSERT INTO analytics.us_market_holidays ([Date], [Status], Start_Time, End_Time, [Description]) VALUES (?, ?, ?, ?, ?)\"\n",
+    "    insert_query = \"INSERT INTO clean.us_market_holidays ([Date], [Status], Start_Time, End_Time, [Description]) VALUES (?, ?, ?, ?, ?)\"\n",
     "    \n",
     "    print(\"Loading Us Market Holiday Data into SQL Server...\")\n",
     "    \n",
@@ -85,15 +79,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "dca2b0b2-655d-4f53-8dcc-b38905cdeca8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import finnhub\n",
     "finnhub_client = finnhub.Client(api_key=\"d5q4p8hr01qq2b6afv1gd5q4p8hr01qq2b6afv20\")\n",
-    "finnhub_holidays = finnhub_client.market_holiday(exchange='US')\n",
     "\n",
+    "for i in range(5) :\n",
+    "    try :\n",
+    "        finnhub_holidays = finnhub_client.market_holiday(exchange='US')\n",
+    "        break\n",
+    "    except Exception as e :\n",
+    "        print(f'Error : {e}. Retrying...{i}')\n",
+    "        time.sleep(5)\n",
+    "    \n",
     "df = pd.DataFrame(finnhub_holidays['data'])\n",
     "df.reset_index(drop=True, inplace=True)\n",
     "\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "02250680-84ee-497f-93ec-e504693133bf",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
    ],
    "source": [
     "try :\n",
-    "    insert_query = \"INSERT INTO analytics.us_market_holidays ([Date], [Status], Start_Time, End_Time, [Description]) VALUES (?, ?, ?, ?, ?)\"\n",
+    "    insert_query = \"INSERT INTO clean.us_market_holidays ([Date], [Status], Start_Time, End_Time, [Description]) VALUES (?, ?, ?, ?, ?)\"\n",
     "    \n",
     "    print(\"Loading Us Market Holiday Data into SQL Server...\")\n",
     "    \n",
