--- a/python/py_Update_US_Market_Holidays.ipynb
+++ b/python/py_Update_US_Market_Holidays.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "8d2b7903-ad49-4b29-b135-8c736d9ac855",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
        "[62 rows x 5 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,9 +168,17 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pyodbc\n",
+    "import time\n",
     "\n",
     "finnhub_client = finnhub.Client(api_key=\"d5q4p8hr01qq2b6afv1gd5q4p8hr01qq2b6afv20\")\n",
-    "finnhub_holidays = finnhub_client.market_holiday(exchange='US')\n",
+    "\n",
+    "for i in range(5) :\n",
+    "    try :\n",
+    "        finnhub_holidays = finnhub_client.market_holiday(exchange='US')\n",
+    "        break\n",
+    "    except Exception as e :\n",
+    "        print(f'Error : {e}. Retrying...{i}')\n",
+    "        time.sleep(5)\n",
     "\n",
     "df = pd.DataFrame(finnhub_holidays['data'])\n",
     "df.reset_index(drop=True, inplace=True)\n",
@@ -195,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "f0d78620-b969-4caf-908b-38d0f62ef054",
    "metadata": {},
    "outputs": [],
@@ -211,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "650457ef-fee8-4ad2-a27c-e3c3239205dc",
    "metadata": {},
    "outputs": [
@@ -219,68 +227,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Timestamp('2023-01-02 00:00:00'), 'closed', None, None, \"New Year's Day\")\n",
-      "(Timestamp('2023-01-16 00:00:00'), 'closed', None, None, 'Birthday of Martin Luther King, Jr')\n",
-      "(Timestamp('2023-02-20 00:00:00'), 'closed', None, None, \"Washington's Birthday\")\n",
-      "(Timestamp('2023-04-07 00:00:00'), 'closed', None, None, 'Good Friday')\n",
-      "(Timestamp('2023-05-29 00:00:00'), 'closed', None, None, 'Memorial Day')\n",
-      "(Timestamp('2023-06-19 00:00:00'), 'closed', None, None, 'Juneteenth')\n",
-      "(Timestamp('2023-07-03 00:00:00'), 'short day', '09:30', '13:00', 'Independence Day')\n",
-      "(Timestamp('2023-07-04 00:00:00'), 'closed', None, None, 'Independence Day')\n",
-      "(Timestamp('2023-09-04 00:00:00'), 'closed', None, None, 'Labor Day')\n",
-      "(Timestamp('2023-11-23 00:00:00'), 'closed', None, None, 'Thanksgiving Day')\n",
-      "(Timestamp('2023-11-24 00:00:00'), 'short day', '09:30', '13:00', 'Thanksgiving Day')\n",
-      "(Timestamp('2023-12-25 00:00:00'), 'closed', None, None, 'Christmas Day')\n",
-      "(Timestamp('2024-01-01 00:00:00'), 'closed', None, None, \"New Year's Day\")\n",
-      "(Timestamp('2024-01-15 00:00:00'), 'closed', None, None, 'Birthday of Martin Luther King, Jr')\n",
-      "(Timestamp('2024-02-19 00:00:00'), 'closed', None, None, \"Washington's Birthday\")\n",
-      "(Timestamp('2024-03-29 00:00:00'), 'closed', None, None, 'Good Friday')\n",
-      "(Timestamp('2024-05-27 00:00:00'), 'closed', None, None, 'Memorial Day')\n",
-      "(Timestamp('2024-06-19 00:00:00'), 'closed', None, None, 'Juneteenth')\n",
-      "(Timestamp('2024-07-03 00:00:00'), 'short day', '09:30', '13:00', 'Independence Day')\n",
-      "(Timestamp('2024-07-04 00:00:00'), 'closed', None, None, 'Independence Day')\n",
-      "(Timestamp('2024-09-02 00:00:00'), 'closed', None, None, 'Labor Day')\n",
-      "(Timestamp('2024-11-28 00:00:00'), 'closed', None, None, 'Thanksgiving Day')\n",
-      "(Timestamp('2024-11-29 00:00:00'), 'short day', '09:30', '13:00', 'Thanksgiving Day')\n",
-      "(Timestamp('2024-12-24 00:00:00'), 'short day', '09:30', '13:00', 'Christmas')\n",
-      "(Timestamp('2024-12-25 00:00:00'), 'closed', None, None, 'Christmas')\n",
-      "(Timestamp('2025-01-01 00:00:00'), 'closed', None, None, \"New Year's Day\")\n",
-      "(Timestamp('2025-01-09 00:00:00'), 'closed', None, None, 'National Mourning Day')\n",
-      "(Timestamp('2025-01-20 00:00:00'), 'closed', None, None, 'Birthday of Martin Luther King, Jr')\n",
-      "(Timestamp('2025-02-17 00:00:00'), 'closed', None, None, \"Washington's Birthday\")\n",
-      "(Timestamp('2025-04-18 00:00:00'), 'closed', None, None, 'Good Friday')\n",
-      "(Timestamp('2025-05-26 00:00:00'), 'closed', None, None, 'Memorial Day')\n",
-      "(Timestamp('2025-06-19 00:00:00'), 'closed', None, None, 'Juneteenth')\n",
-      "(Timestamp('2025-07-03 00:00:00'), 'short day', '09:30', '13:00', 'Independence Day')\n",
-      "(Timestamp('2025-07-04 00:00:00'), 'closed', None, None, 'Independence Day')\n",
-      "(Timestamp('2025-09-01 00:00:00'), 'closed', None, None, 'Labor Day')\n",
-      "(Timestamp('2025-11-27 00:00:00'), 'closed', None, None, 'Thanksgiving Day')\n",
-      "(Timestamp('2025-11-28 00:00:00'), 'short day', '09:30', '13:00', 'Thanksgiving Day')\n",
-      "(Timestamp('2025-12-24 00:00:00'), 'short day', '09:30', '13:00', 'Christmas')\n",
-      "(Timestamp('2025-12-25 00:00:00'), 'closed', None, None, 'Christmas')\n",
-      "(Timestamp('2026-01-01 00:00:00'), 'closed', None, None, \"New Year's Day\")\n",
-      "(Timestamp('2026-01-19 00:00:00'), 'closed', None, None, 'Birthday of Martin Luther King, Jr')\n",
-      "(Timestamp('2026-02-16 00:00:00'), 'closed', None, None, \"Washington's Birthday\")\n",
-      "(Timestamp('2026-04-03 00:00:00'), 'closed', None, None, 'Good Friday')\n",
-      "(Timestamp('2026-05-25 00:00:00'), 'closed', None, None, 'Memorial Day')\n",
-      "(Timestamp('2026-06-19 00:00:00'), 'closed', None, None, 'Juneteenth')\n",
-      "(Timestamp('2026-07-03 00:00:00'), 'closed', None, None, 'Independence Day')\n",
-      "(Timestamp('2026-09-07 00:00:00'), 'closed', None, None, 'Labor Day')\n",
-      "(Timestamp('2026-11-26 00:00:00'), 'closed', None, None, 'Thanksgiving Day')\n",
-      "(Timestamp('2026-11-27 00:00:00'), 'short day', '09:30', '13:00', 'Thanksgiving Day')\n",
-      "(Timestamp('2026-12-24 00:00:00'), 'short day', '09:30', '13:00', 'Christmas')\n",
-      "(Timestamp('2026-12-25 00:00:00'), 'closed', None, None, 'Christmas')\n",
-      "(Timestamp('2027-01-01 00:00:00'), 'closed', None, None, \"New Year's Day\")\n",
-      "(Timestamp('2027-01-18 00:00:00'), 'closed', None, None, 'Birthday of Martin Luther King, Jr')\n",
-      "(Timestamp('2027-02-15 00:00:00'), 'closed', None, None, \"Washington's Birthday\")\n",
-      "(Timestamp('2027-03-26 00:00:00'), 'closed', None, None, 'Good Friday')\n",
-      "(Timestamp('2027-05-31 00:00:00'), 'closed', None, None, 'Memorial Day')\n",
-      "(Timestamp('2027-06-18 00:00:00'), 'closed', None, None, 'Juneteenth')\n",
-      "(Timestamp('2027-07-05 00:00:00'), 'closed', None, None, 'Independence Day')\n",
-      "(Timestamp('2027-09-06 00:00:00'), 'closed', None, None, 'Labor Day')\n",
-      "(Timestamp('2027-11-25 00:00:00'), 'closed', None, None, 'Thanksgiving Day')\n",
-      "(Timestamp('2027-11-26 00:00:00'), 'short day', '09:30', '13:00', 'Thanksgiving Day')\n",
-      "(Timestamp('2027-12-24 00:00:00'), 'closed', None, None, 'Christmas')\n"
+      "Loading Us Market Holiday Data into SQL Server...\n",
+      "Successfully inserted 62 records.\n"
      ]
     }
    ],
@@ -289,40 +237,13 @@
     "\n",
     "rows = list(sorted_df.itertuples(index=False, name=None))\n",
     "\n",
-    "\n",
     "try :\n",
-    "    cursor.execute(\"\"\"\n",
-    "        IF OBJECT_ID('tempdb..#stage_us_market_holidays') IS NOT NULL\n",
-    "            DROP TABLE #stage_us_market_holidays;\n",
-    "        \n",
-    "        CREATE TABLE #stage_us_market_holidays (\n",
-    "            [Date] DATE,\n",
-    "            [Status] NVARCHAR(20),\n",
-    "            Start_Time VARCHAR(20),\n",
-    "            End_Time VARCHAR(20),\n",
-    "            [Description] NVARCHAR(100)\n",
-    "        )\n",
-    "    \"\"\")\n",
-    "    conn.commit()\n",
-    "\n",
-    "    insert_query = \"INSERT INTO #stage_us_market_holidays ([Date], [Status], Start_Time, End_Time, [Description]) VALUES (?, ?, ?, ?, ?)\"\n",
+    "    insert_query = \"INSERT INTO clean.us_market_holidays ([Date], [Status], Start_Time, End_Time, [Description]) VALUES (?, ?, ?, ?, ?)\"\n",
     "    cursor.fast_executemany = True\n",
     "    cursor.executemany(insert_query, rows)\n",
     "    conn.commit()\n",
-    "    \n",
     "\n",
-    "    merge_query = \"\"\"\n",
-    "        MERGE INTO analytics.us_market_holidays AS target\n",
-    "        USING #stage_us_market_holidays AS source\n",
-    "        ON target.[Date] = source.[Date]\n",
-    "        WHEN NOT MATCHED THEN\n",
-    "            INSERT ([Date], [Status], Start_Time, End_Time, [Description])\n",
-    "            VALUES (source.[Date], source.[Stateus], source.Start_Time, source.End_Time, source.[Description]);\n",
-    "        \"\"\")\n",
-    "    cursor.execute(merge_query)\n",
-    "    conn.commit()\n",
-    "    \n",
-    "    print(\"US Market Holidays data updated successfully.\")\n",
+    "    print(f\"Successfully inserted {len(sorted_df)} records.\") \n",
     "    \n",
     "except Exception as e :\n",
     "    print(f\"Error : {e}\")\n",
