--- a/python/py_Get_US_Stock_data.ipynb
+++ b/python/py_Get_US_Stock_data.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "conn = pyodbc.connect(\n",
     "    \"DRIVER={ODBC Driver 17 for SQL Server};\"\n",
-    "    \"SERVER=Kiyoworld;\"\n",
+    "    \"SERVER=;\"\n",
     "    \"DATABASE=USStocks;\"\n",
     "    \"Trusted_Connection=yes;\"\n",
     ")\n",
@@ -80,7 +80,7 @@
     "cursor.fast_executemany = True\n",
     "\n",
     "try :\n",
-    "    insert_query = \"INSERT INTO raw.raw_us_stocks (Ticker, Date, [Open], high, low, [Close], volume) VALUES (?, ?, ?, ?, ?, ?, ?)\"\n",
+    "    insert_query = \"INSERT INTO raw.us_stocks (Ticker, [Date], [Open], [High], [Low], [Close], Volume) VALUES (?, ?, ?, ?, ?, ?, ?)\"\n",
     "    \n",
     "    print(\"Loading Raw Data into SQL Server...\")\n",
     "    \n",
@@ -109,7 +109,7 @@
    ],
    "source": [
     "try :\n",
-    "    cursor.execute('EXEC analytics.sp_Load_Staging_Layer')\n",
+    "    cursor.execute('EXEC analytics.sp_Load_us_stocks_staging')\n",
     "    conn.commit()\n",
     "    print('Success')\n",
     "except Exception as e :\n",
