--- a/python/py_Get_ticker_data.ipynb
+++ b/python/py_Get_ticker_data.ipynb
@@ -12,7 +12,7 @@
     "import numpy as np\n",
     "import pyodbc\n",
     "\n",
-    "finnhub_client = finnhub.Client(api_key=\"d5q4p8hr01qq2b6afv1gd5q4p8hr01qq2b6afv20\")\n",
+    "finnhub_client = finnhub.Client(api_key=\"\")\n",
     "\n",
     "tickers = [\"AMD\", \"NVDA\", \"AMZN\", \"PLTR\", \"TSLA\", \"AAPL\"]\n",
     "profile = []\n",
