--- a/python/py_Init_US_Market_Holidays.ipynb
+++ b/python/py_Init_US_Market_Holidays.ipynb
@@ -36,7 +36,10 @@
     "df['Date'] = pd.to_datetime(df['Date'])\n",
     "\n",
     "df['Start_Time'] = df['Start_Time'].replace(np.nan, None)\n",
-    "df['End_Time'] = df['End_Time'].replace(np.nan, None)"
+    "df['End_Time'] = df['End_Time'].replace(np.nan, None)\n",
+    "\n",
+    "start_date = min(df['Date'])\n",
+    "end_date = max(df['Date'])"
    ]
   },
   {
@@ -50,14 +53,14 @@
      "output_type": "stream",
      "text": [
       "Loading Us Market Holiday Data into SQL Server...\n",
-      "Successfully inserted 46 records.\n"
+      "Successfully inserted 46 records (2021-01-01 00:00:00 - 2025-01-01 00:00:00).\n"
      ]
     }
    ],
    "source": [
     "conn = pyodbc.connect(\n",
     "    \"DRIVER={ODBC Driver 17 for SQL Server};\"\n",
-    "    \"SERVER=Kiyoworld;\"\n",
+    "    \"SERVER=;\"\n",
     "    \"DATABASE=USStocks;\"\n",
     "    \"Trusted_Connection=yes;\"\n",
     ")\n",
@@ -71,7 +74,7 @@
     "    rows = list(df.itertuples(index=False, name=None))\n",
     "    cursor.executemany(insert_query, rows)\n",
     "    conn.commit()\n",
-    "    print(f\"Successfully inserted {len(df)} records.\") \n",
+    "    print(f\"Successfully inserted {len(df)} records ({start_date} - {end_date}).\") \n",
     "\n",
     "except Exception as e :\n",
     "    print(f\"Error : {e}\")"
@@ -79,12 +82,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "dca2b0b2-655d-4f53-8dcc-b38905cdeca8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "finnhub_client = finnhub.Client(api_key=\"d5q4p8hr01qq2b6afv1gd5q4p8hr01qq2b6afv20\")\n",
+    "finnhub_client = finnhub.Client(api_key=\"\")\n",
     "\n",
     "for i in range(5) :\n",
     "    try :\n",
@@ -110,14 +113,17 @@
     "df['End_Time'] = df['End_Time'].apply(lambda x: x if pd.notna(x) and x != '' else None)\n",
     "\n",
     "sorted_df = df.sort_values(by='Date')\n",
-    "sorted_df = sorted_df[sorted_df['Date'] > '2025-01-01']\n",
     "\n",
-    "sorted_df['Date'] = pd.to_datetime(sorted_df['Date'])"
+    "sorted_df['Date'] = pd.to_datetime(sorted_df['Date'])\n",
+    "sorted_df = sorted_df[sorted_df['Date'] > end_date]\n",
+    "\n",
+    "start_date2 = min(sorted_df['Date'])\n",
+    "end_date2 = max(sorted_df['Date'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "02250680-84ee-497f-93ec-e504693133bf",
    "metadata": {},
    "outputs": [
@@ -126,7 +132,7 @@
      "output_type": "stream",
      "text": [
       "Loading Us Market Holiday Data into SQL Server...\n",
-      "Successfully inserted 36 records.\n"
+      "Successfully inserted 36 records (2025-01-09 00:00:00 - 2027-12-24 00:00:00).\n"
      ]
     }
    ],
@@ -140,7 +146,7 @@
     "    cursor.fast_executemany = True\n",
     "    cursor.executemany(insert_query, rows)\n",
     "    conn.commit()\n",
-    "    print(f\"Successfully inserted {len(sorted_df)} records.\") \n",
+    "    print(f\"Successfully inserted {len(sorted_df)} records ({start_date2} - {end_date2}).\") \n",
     "\n",
     "except Exception as e :\n",
     "    print(f\"Error : {e}\")\n",
